--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -53,6 +53,8 @@
     <string name="menu_add_to_blacklist">Add to blacklist</string>
     <string name="toast_added_to_blacklist">%s added to blacklist.</string>
 
+    <string name="people">People</string>
+
     <!--  Localized dialer buttons.
           In English, we don't need a secondary row, so all values are empty.
           Change these values depending on your language requirements.
